src/objects/Approver__c.object
<CustomObject>
    <description>This is used to save approvers information.</description>
    <fields>
        <fullName>Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <formula>User__r.LastName  &amp; &quot;, &quot; &amp; User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA__c</fullName>
        <formula>General_Task__r.CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in approval process for change management</description>
        <label>Change Management</label>
        <referenceTo>Change_Management__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Task</label>
        <referenceTo>General_Task__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <formula>General_Task__r.Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <formula>General_Task__r.CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_name__c</fullName>
        <formula>General_Task__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Position__c</fullName>
        <label>Sequence Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Updated__c</fullName>
        <label>Status Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approver</label>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>